# nutriAI

./: .gitignore  NutriAI.session  README.md  app.py  nutritionistAgent.py  pyproject.toml  telegram.py
src/: __init__.py  app.py
src/modules/: food_image_analyser.py  nutritionist_agent.py  telegram.py
